# MeidiasEngine

./: CMakeLists.txt  README.md  regen.bat
include/: CMakeLists.txt  stdafx.h  util.h
include/render/ogl/: render_ogl.h
include/render/vk/: render_vk.h
src/: CMakeLists.txt  main.c  render.c  render.h  stdafx.h  util.h  window.c  window.h
src/render/ogl/: render_ogl.c
src/render/vk/: render_vk.c
